# Aquarium98

./: .gitignore  CHANGELOG.md  LICENSE  PACKAGING.md  README.md  aquarium.py  aquarium98.spec  build.py  config.default.json  pyproject.toml  requirements-web.txt  requirements.txt  run.bat  run.command  run.sh  screenshot.py  screenshot_tool.py  test_smoke.py  web_main.py
.github/workflows/: build-release.yml  build-web.yml  ci.yml  release.yml
installer/: aquarium98.iss  build_appimage.sh  create_dmg.sh  entitlements.plist
src/: __init__.py  achievement_popup.py  achievements_panel.py  coin_system.py  config.py  confirm_dialog.py  context_menu.py  cursor_manager.py  encyclopedia_panel.py  event_log_panel.py  fish_info_panel.py  fish_roster_panel.py  fish_store_panel.py  graveyard_panel.py  how_to_play_panel.py  icon_gen.py  music_player.py  renderer.py  settings_dialog.py  sound_manager.py  splash.py  startup.py  stats_panel.py  tooltip.py  tray.py  treasure_chest.py  update_check.py  window.py
src/simulation/: __init__.py  environment.py  fish.py  population.py  species.py
web/: __init__.py  manifest.json  pwa_inject.py  window_web.py
